--- a/templates/projects/index.html
+++ b/templates/projects/index.html
@@ -31,7 +31,7 @@
                             <th>التكلفة التعاقدية</th>
                             {% endif %}
                             <th>التكلفة الفعلية</th>
-                            <th>إجمالي المدفوعات</th> {# <-- START: New Column #}
+                            <th>إجمالي المدفوعات</th> {# <-- START: New Column Header #}
                              {% if current_user.role == 'admin' %}
                              <th>الوفر/الزيادة</th>
                              {% endif %}
